# librepods

./: .gitignore  README.md
.github/workflows/: windows-build.yml
bluetooth/: BleCryptoUtils.cpp  BleCryptoUtils.h  BleInfo.h  IBluetoothMonitor.h
linux/: BluezBluetoothMonitor.cpp  BluezBluetoothMonitor.h  CMakeLists.txt  Main.qml  Onboarding.qml  main.cpp
linux/ble/: aacptransport.h  blemanager.cpp  blemanager.h  qt_aacptransport.cpp  qt_aacptransport.h
windows/: ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION.md  L2CAP_IMPLEMENTATION_SUMMARY.md  LibrePods.sln  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  TESTING_L2CAP.md  build.bat  build.sh  install.ps1
windows/LibrePods.Core/: LibrePods.Core.csproj
windows/LibrePods.Core/Models/: AirPodsStatus.cs  BatteryInfo.cs  EarDetectionStatus.cs  NoiseControlMode.cs
windows/LibrePods.Core/Protocol/: AAPProtocol.cs
windows/LibrePods.Core/Utils/: ByteUtils.cs  Logger.cs
windows/LibrePods.Desktop/: App.xaml  App.xaml.cs  LibrePods.Desktop.csproj  MainWindow.xaml  MainWindow.xaml.cs  icon.txt
windows/LibrePods.Desktop/Audio/: EarDetectionController.cs  MediaController.cs
windows/LibrePods.Desktop/Bluetooth/: BluetoothManager.cs  NativeBluetoothManager.cs
windows/LibrePods.Desktop/Services/: AirPodsService.cs
windows/LibrePods.Windows/: App.xaml  App.xaml.cs  LibrePods.Windows.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
windows/LibrePods.Windows/Audio/: EarDetectionController.cs  MediaController.cs
windows/LibrePods.Windows/Bluetooth/: BluetoothManager.cs
windows/LibrePods.Windows/Services/: AirPodsService.cs
windows/bluetooth/: WindowsBluetoothMonitor.cpp  WindowsBluetoothMonitor.h
windows/driver/: AacpTransportDriver.c  AacpTransportPublic.h
windows/installer/: setup.iss
windows/transport/: aacp_transport_win.cpp  aacp_transport_win.h
